--- a/_pages/404.md
+++ b/_pages/404.md
@@ -1,14 +1,14 @@
 ---
-title: "Page Not Found"
-excerpt: "Page not found. Your pixels are in another canvas."
+title: "Página No Encontrada"
+excerpt: "Página no encontrada. Que la Fuerza te acompañe."
 sitemap: false
 permalink: /404.html
 ---
 
-Sorry, but the page you were trying to view does not exist --- perhaps you can try searching for it below.
+Lo sentimos, pero la página que intentabas ver no existe --- quizás puedas intentar buscarla más abajo.
 
 <script type="text/javascript">
-  var GOOG_FIXURL_LANG = 'en';
+  var GOOG_FIXURL_LANG = 'es';
   var GOOG_FIXURL_SITE = '{{ site.url }}'
 </script>
 <script type="text/javascript"
